# Automarks

./: README.md
Auto_Marks/: .gitignore
Auto_Marks/automarks_BE/: .gitignore  COLLEGE_DEPLOYMENT_GUIDE.md  README.md  check_db_status.py  pyproject.toml  requirements.txt  run_api.py  test_pdf_content.py
Auto_Marks/automarks_BE/app/: database.py  main.py  models.py  schemas.py
Auto_Marks/automarks_BE/app/services/: analyzer.py  extractor.py
Auto_Marks/automarks_BE/scripts/: migrate_upload_log.py  repair_subject_codes.py
Auto_Marks/automarks_BE/sql/: schema.sql
Auto_Marks/automarks_BE/utils/: Demo.code-workspace  pdf_converter.py
Auto_Marks/automarks_FE/: App.tsx  Demo.code-workspace  README.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js.bak  types.ts
Auto_Marks/automarks_FE/api/: client.ts
Auto_Marks/automarks_FE/components/features/notifications/: NotificationDropdown.tsx
Auto_Marks/automarks_FE/components/features/settings/: ApiSettingsModal.tsx
Auto_Marks/automarks_FE/components/layout/: Layout.tsx  Navbar.tsx
Auto_Marks/automarks_FE/components/theme/: mode-toggle.tsx  theme-provider.tsx
Auto_Marks/automarks_FE/features/: Analytics.tsx  Dashboard.tsx  ExportPage.tsx  ResultsExplorer.tsx  StudentProfile.tsx  UploadErrorPopup.tsx  UploadPage.tsx
Auto_Marks/automarks_FE/src/: index.css
Auto_Marks/automarks_FE/styles/: theme.css
Auto_Marks/automarks_FE/utils/: batches.ts  ordinal.ts
